# POO_Proiect

./: .gitignore  CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h  Invitation.cpp  Invitation.h  Manager.cpp  Manager.h  Organizator.cpp  Organizator.h  Organizer.cpp  Organizer.h  Participant.cpp  Participant.h  README.md  Venue.cpp  Venue.h  VenueManager.cpp  VenueManager.h  all_venues_are_unavailable.cpp  all_venues_are_unavailable.h  main.cpp
